[gd_scene load_steps=8 format=2]

[ext_resource path="res://application/main.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/levelup.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/button.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/chooseCard.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/enemyDied.wav" type="AudioStream" id=5]

[sub_resource type="Gradient" id=8]

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 8 )
width = 1920
height = 1080

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 1254, 304 )
texture = SubResource( 2 )

[node name="scene_placeholder" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="audio_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="audio_levelup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="audio_enemy_died" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="audio_card" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="timer" type="Timer" parent="."]

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
